-- MySQL Script generated by MySQL Workbench
-- Mon Aug  2 20:27:09 2021
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema table_tennis
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema table_tennis
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `table_tennis` DEFAULT CHARACTER SET utf8 ;
USE `table_tennis` ;

-- -----------------------------------------------------
-- Table `table_tennis`.`questions`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`questions` (
                                                          `id` INT NOT NULL,
                                                          `content` VARCHAR(255) NOT NULL,
    PRIMARY KEY (`id`))
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `table_tennis`.`users`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`users` (
                                                      `id` INT NOT NULL AUTO_INCREMENT,
                                                      `name` VARCHAR(20) NOT NULL,
    `mail` VARCHAR(255) NOT NULL,
    `ps` VARCHAR(255) NOT NULL,
    `answer` VARCHAR(255) NOT NULL,
    `created_at` DATETIME NOT NULL,
    `updated_at` DATETIME NOT NULL,
    `questions_id` INT NOT NULL,
    PRIMARY KEY (`id`),
    INDEX `fk_users_questions1_idx` (`questions_id` ASC) VISIBLE,
    UNIQUE INDEX `mail_UNIQUE` (`mail` ASC) VISIBLE,
    CONSTRAINT `fk_users_questions1`
    FOREIGN KEY (`questions_id`)
    REFERENCES `table_tennis`.`questions` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `table_tennis`.`opponents`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`opponents` (
                                                          `id` INT NOT NULL AUTO_INCREMENT,
                                                          `name` VARCHAR(20) NOT NULL,
    `users_id` INT NOT NULL,
    PRIMARY KEY (`id`),
    UNIQUE INDEX `name_UNIQUE` (`name` ASC) VISIBLE,
    INDEX `fk_opponents_users1_idx` (`users_id` ASC) VISIBLE,
    CONSTRAINT `fk_opponents_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `table_tennis`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `table_tennis`.`matches`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`matches` (
                                                        `id` INT NOT NULL,
                                                        `name` VARCHAR(30) NOT NULL,
    `round` VARCHAR(30) NOT NULL,
    PRIMARY KEY (`id`))
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `table_tennis`.`regists`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`regists` (
                                                        `id` INT NOT NULL AUTO_INCREMENT,
                                                        `matches_id` INT NOT NULL,
                                                        `users_id` INT NOT NULL,
                                                        PRIMARY KEY (`id`),
    INDEX `fk_regist_match1_idx` (`matches_id` ASC) VISIBLE,
    INDEX `fk_regist_users1_idx` (`users_id` ASC) VISIBLE,
    CONSTRAINT `fk_regist_match1`
    FOREIGN KEY (`matches_id`)
    REFERENCES `table_tennis`.`matches` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
    CONSTRAINT `fk_regist_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `table_tennis`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `table_tennis`.`results`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `table_tennis`.`results` (
                                                        `id` INT NOT NULL AUTO_INCREMENT,
                                                        `my_score` INT NOT NULL,
                                                        `opponent_score` INT NOT NULL,
                                                        `regists_id` INT NOT NULL,
                                                        `opponents_id` INT NOT NULL,
                                                        PRIMARY KEY (`id`),
    INDEX `fk_result_regist1_idx` (`regists_id` ASC) VISIBLE,
    INDEX `fk_results_opponents1_idx` (`opponents_id` ASC) VISIBLE,
    CONSTRAINT `fk_result_regist1`
    FOREIGN KEY (`regists_id`)
    REFERENCES `table_tennis`.`regists` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
    CONSTRAINT `fk_results_opponents1`
    FOREIGN KEY (`opponents_id`)
    REFERENCES `table_tennis`.`opponents` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
    ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;

-- -----------------------------------------------------
-- Data for table `table_tennis`.`questions`
-- -----------------------------------------------------
START TRANSACTION;
USE `table_tennis`;
INSERT INTO `table_tennis`.`questions` (`id`, `content`) VALUES (0, '出身地は？');
INSERT INTO `table_tennis`.`questions` (`id`, `content`) VALUES (1, '飼っていたペットの名前は？');
INSERT INTO `table_tennis`.`questions` (`id`, `content`) VALUES (2, '最初に行った海外の都市は？');
INSERT INTO `table_tennis`.`questions` (`id`, `content`) VALUES (3, '兄弟姉妹の名前は？');
INSERT INTO `table_tennis`.`questions` (`id`, `content`) VALUES (4, '好きなスポーツは？');

COMMIT;

