package model;
import java.sql.Timestamp;
public class Default {
    private Integer id;
    public Default(Integer id){
        this.id = id;
    }
    public Integer getId() {
        return id;
    }

}